Implement sending email and use docker